--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ h1{
 
 h2{
     color: rgb(58, 180, 9);
-    background-color: #025157;
+    background-color: #485e5f;
 }
 
 p {
@@ -13,7 +13,8 @@ p {
 }
 
 button {
-    color: #fff;
+    color: white;
+    background-color: #025157;
 }
 
 body{
@@ -24,13 +25,21 @@ body{
     margin: 40px 20px 0px 20px;
     font-size: 0;
     font-family: sans-serif;
-    height: 45px;
+    line-height: 45px;
   }
 
 .menu-item{
     display: inline;
     margin-right: 25px;
     margin-left: 25px;
+}
+
+.fixed-header{
+    position: fixed;
+    background-color: white;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .header > * {
@@ -76,4 +85,50 @@ body{
     padding-bottom: 12px;
     border: 0;
     border-radius: 5px;
+  }
+
+.seccion{
+    display: flex;
+    width: 70%;
+    margin: 100px auto;
+    align-items: center;
+    /* justify-content: center;  */
+}
+
+.publish {
+    margin: 10px 10px 10px 10px;
+  }
+
+.publish h3 {
+    font-family: "Alegreya", serif;
+    font-size: 40px;
+    line-height: 48px;
+    color: #025157;
+  }
+  
+.publish > p {
+    font-size: 16px;
+    color: #343434;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+  
+.publish > form {
+    display: flex;
+  }
+  
+.publish > form p {
+    color: #025157;
+    margin-right: 18px;
+  }
+
+.explanatory-video {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+.explanatory-video img {
+    width: 120px;
+    margin-top: 10px;
   }
